--- a/src/posts/2022-11-02-markdown.md
+++ b/src/posts/2022-11-02-markdown.md
@@ -2,6 +2,7 @@
 title: 'Post with all the markdown'
 description: 'A lot of markdown packages are installed to help you write your posts. All presets are personal preference.'
 date: 2022-11-02
+draft: true
 ---
 
 A lot of markdown packages are installed to help you write your posts. You can configure them in `config/plugins/markdown.js`.
